# anycli

./: Cargo.toml  README.md  index.json
adapters/: 1688.yaml  36kr.yaml  amazon.yaml  antigravity.yaml  apple-podcasts.yaml  arxiv.yaml  baidu-scholar.yaml  baidu.yaml  band.yaml  barchart.yaml  bbc.yaml  bilibili.yaml  binance.yaml  bloomberg.yaml  bluesky.yaml  boss.yaml  chaoxing.yaml  chatgpt-app.yaml  chatgpt.yaml  chatwise.yaml  cnki.yaml  codex.yaml  coupang.yaml  crates.yaml  csdn.yaml  ctrip.yaml  cursor.yaml  devto.yaml  dictionary.yaml  discord-app.yaml  douban.yaml  doubao-app.yaml  doubao.yaml  douyin.yaml  eastmoney.yaml  ebay.yaml  exchange.yaml  facebook.yaml  gemini.yaml  gitee.yaml  (+76 more)
src/: adapter.rs  browser.rs  hub.rs  lib.rs  main.rs  output.rs  pipeline.rs  registry.rs
